# godot-cppscript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  code_format.py  configure_script.py  cppscript-configure.cmake  cppscript-configure.py  cppscript.py  cppscript_bindings.py  generate.py  generate.sh  godot-cppscript.cmake  godot_cppscript.cmake  godot_cppscript.py  macros.h  main.cpp  register_types.cpp  scripts.gdextension  template_cmake.py  template_scons.py
.github/workflows/: ci.yaml
cmake/: godot-cppscript.cmake
project/: export_presets.cfg  icon.png.import  main.gd  main.tscn  project.godot  scripts.gdextension
root/: Test.tscn  project.godot
src/: cppscript.h  cppscript_bindings.h  cppscript_defs.h  example.cpp  example.hpp  example_properties.hpp  macros.h  register_types.cpp  register_types.h
src/dir/: direxample.hpp
templates/: cppscript.h.in  register_types.cpp.in  register_types.h.in  scripts.gdextension.in
